--- a/app/src/main/res/layout/item_alert.xml
+++ b/app/src/main/res/layout/item_alert.xml
@@ -8,27 +8,51 @@
     android:layout_marginBottom="8dp"
     android:background="@android:color/black">
 
-    <TextView
-        android:id="@+id/textViewOrderSymbol"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Symbol"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/textViewOrderDetails" />
+
 
     <TextView
-        android:id="@+id/textViewOrderDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Details"
+        android:id="@+id/alert_sym"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Alert Symbol"
         android:textColor="@android:color/white"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@id/textViewOrderSymbol"
-        app:layout_constraintTop_toTopOf="@id/textViewOrderSymbol"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/alert_watch_price"/>
+
+    <TextView
+        android:id="@+id/alert_watch_price"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Alert Watch Price: $50.00"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/alert_sym"
+        app:layout_constraintBottom_toTopOf="@id/alert_watch_type"
+        />
+
+    <TextView
+        android:id="@+id/alert_watch_type"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Alert Watch Type Above or Below"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/alert_watch_price"
+        app:layout_constraintBottom_toTopOf="@id/alert_timestamp"
+        />
+    <TextView
+        android:id="@+id/alert_timestamp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Alert Timestamp DateTime"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/alert_watch_type"
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
