--- a/app/src/main/res/layout/item_alert.xml
+++ b/app/src/main/res/layout/item_alert.xml
@@ -8,51 +8,70 @@
     android:layout_marginBottom="8dp"
     android:background="@android:color/black">
 
-
-
+    <!-- Alert Symbol -->
     <TextView
         android:id="@+id/alert_sym"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="Alert Symbol"
         android:textColor="@android:color/white"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/alert_watch_price"/>
-
-    <TextView
-        android:id="@+id/alert_watch_price"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Alert Watch Price: $50.00"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/alert_sym"
-        app:layout_constraintBottom_toTopOf="@id/alert_watch_type"
+        app:layout_constraintEnd_toStartOf="@id/alert_price_layout"
         />
 
+    <!-- Alert Watch Type -->
     <TextView
         android:id="@+id/alert_watch_type"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="Alert Watch Type Above or Below"
         android:textColor="@android:color/white"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/alert_watch_price"
-        app:layout_constraintBottom_toTopOf="@id/alert_timestamp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/alert_sym"
+        app:layout_constraintEnd_toStartOf="@id/alert_price_layout"
         />
+
+    <!-- Alert Timestamp -->
     <TextView
         android:id="@+id/alert_timestamp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="Alert Timestamp DateTime"
         android:textColor="@android:color/white"
-        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/alert_watch_type"
+        app:layout_constraintEnd_toStartOf="@id/alert_price_layout"
         />
 
+    <!-- Alert Price Layout -->
+    <LinearLayout
+        android:id="@+id/alert_price_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Alert Watch Price -->
+        <TextView
+            android:id="@+id/alert_watch_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Alert Watch Price: $0.0"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <!-- Alert Current Price -->
+        <TextView
+            android:id="@+id/alert_current_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Market Price: $0.0"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
