--- a/app/src/main/res/layout/item_asset.xml
+++ b/app/src/main/res/layout/item_asset.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -9,7 +10,7 @@
 
     <TextView
         android:id="@+id/textViewAssetSymbol"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Asset Symbol"
         android:textColor="@android:color/white"
@@ -32,4 +33,15 @@
         android:text="Orders: 0"
         android:textSize="18sp"
         android:layout_marginTop="4dp" />
+
+    <TextView
+        android:id="@+id/currentPrice"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textViewAssetSymbol"
+        app:layout_constraintTop_toBottomOf="@id/textViewAssetSymbol"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Current Price: $0.00"
+        android:textColor="@android:color/white"
+        android:textSize="25sp" />
 </LinearLayout>
